# energie-predictor

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/644718822940049091/: meta.yaml
mlruns/644718822940049091/600d7a80d69346e38d821001ca84619c/: meta.yaml
mlruns/644718822940049091/600d7a80d69346e38d821001ca84619c/artifacts/model/: MLmodel  conda.yaml  model.pkl  python_env.yaml  requirements.txt
mlruns/644718822940049091/600d7a80d69346e38d821001ca84619c/metrics/: mse
mlruns/644718822940049091/600d7a80d69346e38d821001ca84619c/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit  mlflow.source.name
src/energie_predictor/: model.py
