[project]
name = "energie-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "vanessa-wim",email = "vanessawimmer17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (==2.2.3)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "mlflow (==2.22.0)"
]

[tool.poetry]
packages = [{include = "energie_predictor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "black (>=26.3.1,<27.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88